--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 *{
- margin: 0;
- padding: 0;
- box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 header {
   display: flex;
   width: 100%;
-  padding: 25px 0;
+  padding: 25px 0px;
   justify-content: center;
   height: 100px;
   background-color: rgb(255, 237, 230);
@@ -15,7 +15,7 @@ header {
 }
 
 .contendor-menú-principal {
-  display: block;
+  display: flex;
   width: 100%;
   max-width: 1100px;
 }
@@ -39,7 +39,7 @@ header {
 }
 
 .botón-contacto {
-  display:none;
+  display:flex;
   background-color: rgb(14, 93, 88);
   align-items: center;
   justify-content: center;
@@ -142,7 +142,7 @@ a {
   transition: 0.2s;
 }
 
-img {
+.imagen_presentación {
   display: block;
   border-radius: 50%;
   width: 100%;
@@ -194,20 +194,35 @@ img {
 .contenedor-herramientas {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   width: 100%;
-  justify-content:center;
+  justify-content: center;
   padding: 0 200px;
   margin-top: 30px;
 }
 
 .tarjeta-herramienta {
-  width: 250px;
-  height: 250px;
+  width: 300px;
+  height: 300px;
   border: 1px solid rgb(239, 207, 146);
   border-radius: 10px;
   margin: 10px;
-  padding: 40px;
+  padding: 10px 30px;
+  background-color: rgb(255, 255, 255);
+  justify-content: center;
+  align-items: center;
+}
+
+.imagen_proyecto{
+  width: 90%;
+  height: 60%;
+  overflow-clip-margin: content-box;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+.nombre_proyecto{
+  margin-top: 50px;
+  font-weight: 700;
 }
 
 .sección-frase {
