--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ a {
 .frase-conocimientos {
   display: block;
   text-align: center;
-  font-size: 20px;
+  font-size: 1rem;
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   line-height: 1.4;
@@ -201,8 +201,8 @@ a {
 }
 
 .tarjeta-herramienta {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   border: 1px solid rgb(239, 207, 146);
   border-radius: 10px;
   margin: 10px;
@@ -210,6 +210,14 @@ a {
   background-color: rgb(255, 255, 255);
   justify-content: center;
   align-items: center;
+}
+
+.icono-herramienta{
+  display: block;
+  font-size: 6em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  transition: 0.2s;
 }
 
 .imagen_proyecto{
@@ -220,9 +228,9 @@ a {
   padding-left: 20px;
 }
 
-.nombre_proyecto{
-  margin-top: 50px;
-  font-weight: 700;
+.nombre-herramienta{
+  margin-top: 20px;
+  font-size: 1em;
 }
 
 .sección-frase {
@@ -260,10 +268,11 @@ a {
 
 .sección-proyectos {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  padding: 110px 40px 110px;
+  background-color: rgb(255, 255, 255);
 }
 
 .título-proyectos {
@@ -274,42 +283,79 @@ a {
 }
 
 .breve-descripción-proyectos {
-  display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  text-align: center;
-  font-size: 20px;
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   color: rgb(0, 0, 0);
   font-size: 1rem;
-  max-width: 800px;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
-.contendor-contacto {
-  display: block;
-  width: 100%;
-  max-width: 1100px;
-}
-
-.datos-de-contacto {
+.contenedor-proyectos{
   display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  padding: 0 200px;
+  margin-top: 30px;
+}
+
+.tarjeta-proyecto{
+  width: 250px;
+  height: 250px;
+  border: 1px solid rgb(239, 207, 146);
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px 30px;
+  background-color: rgb(255, 255, 255);
+  justify-content: center;
+  align-items: center;
+}
+
+.nombre-proyecto{
+  margin-top: 30px;
+  font: 1.5rem;
+}
+
+.sección-contacto{
   background-color: rgb(255, 237, 230);
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 220px;
+  align-items: center;
+  justify-content: center;
+}
+
+.contenedor-contacto {
+  max-width: 1100px;
+  width: 100%;
+  background-color: rgb(254, 254, 254);
+  display: flex;
   padding: 80px 80px;
   border-radius: 15px;
   border: 1px solid rgb(240, 219, 219);
 }
 
+
+
+.datos-de-contacto {
+  display: block;
+}
+
 .redes {
-  width: 50%;
   padding-right: 25px;
-  text-align: left;
+  width: 50%;
+}
+
+.sección-escribime{
+  padding-left: 20px;
+  width: 50%;
 }
 
 .título-contacto {
   margin-top: 10px;
   margin-bottom: 20px;
-  font-size: 20px;
+  font-size: 1empx;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   color: rgb(0, 0, 0);
@@ -318,15 +364,46 @@ a {
 .descripción-contacto {
   margin-top: 0px;
   margin-bottom: 20px;
-  font-size: 15px;
+  font-size: 1em;
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   color: rgb(0, 0, 0);
 }
 
+.lista-redes{
+  flex-wrap: wrap;
+}
+
+.icono-contacto{
+  font-size: 2em;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.título-escribime{
+  font-size: 1empx;
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  color: rgb(0, 0, 0);
+  margin-left: 100px;
+}
+
+label{
+  display:flex;
+  margin-top: 10px;  
+  margin-bottom: 10px;
+  font-weight: 600;
+}
+
+.input-nombre{
+  display: flex;
+
+}
+
+
 footer {
   display: flex;
-  padding: 60px 20px 60px;
+  padding: 50px 50px 50px;
   background-color: rgb(14, 93, 88);
   flex-direction: column;
   justify-content: center;
@@ -340,16 +417,34 @@ footer {
 
 .menú-footer {
   display: flex;
-  list-style: none;
   padding: 0;
-  margin: 0;
+  margin-bottom: 10px;
 }
 
 li {
   display: list-item;
   margin: 0 10px;
   line-height: 1.5;
+  list-style: none;
 }
 
-.apartado-nav-footer {
+.lista-redes-footer{
+  display: flex;
+  flex-wrap: wrap;
 }
+.icono-footer{
+  font-size: 2em;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.frase-cierre{
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 15px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  color: rgb(0, 0, 0);
+}
+
+
