--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@ a {
   background-color: rgb(255, 255, 255);
   justify-content: center;
   align-items: center;
+  transition: 0.2s
 }
 
 .nombre-proyecto{
@@ -335,8 +336,6 @@ a {
   border-radius: 15px;
   border: 1px solid rgb(240, 219, 219);
 }
-
-
 
 .datos-de-contacto {
   display: block;
@@ -392,12 +391,68 @@ label{
   display:flex;
   margin-top: 10px;  
   margin-bottom: 10px;
+  font-family: "Raleway", sans-serif;
   font-weight: 600;
 }
 
-.input-nombre{
-  display: flex;
+.input-nombre input{
+  display: block;
+  border-radius: 10px;
+  background-color: #f6f7fb;
+  border: 1px solid #f6f7fb;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 1em ;
+  padding: 10px 15px;
+  width: 100%;
+  outline: none;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: 0.2s;
+}
 
+.input-apellido{
+  display: block;
+  border-radius: 10px;
+  background-color: #f6f7fb;
+  border: 1px solid #f6f7fb;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 1em ;
+  padding: 10px 15px;
+  width: 100%;
+  outline: none;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: 0.2s;
+}
+
+.input-mail{
+  display: block;
+  border-radius: 10px;
+  background-color: #f6f7fb;
+  border: 1px solid #f6f7fb;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 1em ;
+  padding: 10px 15px;
+  width: 100%;
+  outline: none;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: 0.2s;
+}
+
+.input-mensaje{
+  display: block;
+  border-radius: 10px;
+  background-color: #f6f7fb;
+  border: 1px solid #f6f7fb;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 1em ;
+  padding: 10px 15px;
+  width: 100%;
+  outline: none;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: 0.2s;
 }
 
 
@@ -447,4 +502,27 @@ li {
   color: rgb(0, 0, 0);
 }
 
+@media ( max-width: 100){
+  .sección-contacto
+  width: 50%;
+}
+@media (max-width: 900px) {
+  .contenedor-contacto {
+    flex-direction: column;
+    padding: 0;
+  }
+}
 
+.contenedor-herramientas :hover {
+  border-color: 1px solid rgb(247, 227, 227);
+  transition-property: border;
+  background-color: rgb(247, 227, 227);
+  transition-duration: 2s;
+}
+
+.contenedor-proyectos :hover {
+  border-color: 1px solid rgb(247, 227, 227);
+  transition-property: border;
+  background-color: rgb(247, 227, 227);
+  transition-duration: 2s;
+}
